# schematose

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindTinyXML2.cmake
docs/: schematose.md
include/: schematose.hpp
test/: element.cpp
